<resources>
    <string name="app_name">앞광고</string>

    <string name="car_tv">자동차</string>
    <string name="fashion_tv">패션</string>
    <string name="public_service_tv">공익</string>
    <string name="place_tv">장소</string>
    <string name="competition_tv">대회</string>
    <string name="game_tv">게임</string>
    <string name="electronics_tv">전자기기</string>
    <string name="ad_question_tv">광고 문의하기</string>
    <string name="watched_ad_tv">시청한 광고</string>
    <string name="ad_content_tv">광고</string>
    <string name="ad_name_tv">광고 제목</string>
    <string name="deadline_tv">기한</string>
    <string name="site_tv">사이트</string>
    <string name="category_tv">카테고리</string>
    <string name="contact_tv">연락처</string>


    <string name="open">열림</string>
    <string name="close">닫힘</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>